# models_from_scratch

./: .gitignore  README.md  gpt model.ipynb  main.py  pyproject.toml
GPT2/: gpt model.ipynb  gpt-pretrined-weights.ipynb
