[project]
name = "models-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "tensorflow>=2.18.1",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
]
